zellij-integration-tests/tests/snapshots/tabs__break_pane_to_the_right.snap
---
source: zellij-integration-tests/tests/tabs.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  Tab #2  + 
                           Pane #1                         │                           Pane #2
$ gamma                                                    │$ beta█
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
